--- a/a2-binding/src/app/components/films/film-list/film-list.component.html
+++ b/a2-binding/src/app/components/films/film-list/film-list.component.html
@@ -20,6 +20,14 @@
 
   <div class="row">
     <div class="card-group">
+      <app-film-item
+        [film]="film"
+        *ngFor="let film of films | filmFinder:searchPattern:searchField">
+      </app-film-item>
+    </div>
+  </div>
+  <!-- <div class="row">
+    <div class="card-group">
       <div class="card" *ngFor="let film of films | filmFinder:searchPattern:searchField" style="width: 18rem;">
         <img class="card-img-top" [src]="film.poster" alt="Card image cap">
         <div class="card-body">
@@ -30,9 +38,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="row mt-4">
+  <!-- <div class="row mt-4">
     <form class="col-4">
       <div class="input-group mb-3">
         <div class="input-group-prepend">
@@ -65,5 +73,5 @@
   </div>
   <div class="col-2">
     <img [src]="posterPreview" alt="">
-  </div>
+  </div> -->
 </div>
