--- a/a2-binding/src/app/components/films/film-list/film-list.component.html
+++ b/a2-binding/src/app/components/films/film-list/film-list.component.html
@@ -27,20 +27,10 @@
       </app-film-item>
     </div>
   </div>
-  <!-- <div class="row">
-    <div class="card-group">
-      <div class="card" *ngFor="let film of films | filmFinder:searchPattern:searchField" style="width: 18rem;">
-        <img class="card-img-top" [src]="film.poster" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">{{ film.title | uppercase }}</h5>
-          <p class="card-text"><small>{{ film.releaseDate }}</small></p>
-          <p class="card-text">{{ film.summary }}</p>
-          <button class="btn btn-danger btn-block" [disabled]="film.title === 'La monja'" (click)="onClickDeleteFilm(film.title)">Delete</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
+<app-film-form
+  (createFilm)="onClickCreateFilm($event)"
+></app-film-form>
   <!-- <div class="row mt-4">
     <form class="col-4">
       <div class="input-group mb-3">
